test/compile_error/badnamespace.conf.def
config ::bad_namespace_conf {
}
